--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,6 +65,7 @@ body {
   body {
     -webkit-print-color-adjust: exact;
     print-color-adjust: exact;
+    background-color: white !important;
   }
   body * {
     visibility: hidden;
@@ -74,7 +75,7 @@ body {
     visibility: visible;
   }
   #resume-preview {
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
     width: 100%;
@@ -82,6 +83,7 @@ body {
     transform: scale(1);
     margin: 0;
     padding: 0;
+    overflow: visible;
   }
   .page-break {
     page-break-before: always;
